Progress update mid-refactor; updater app and package application in general still incomplete

--- a/DiffBlit.Core.Tests/DiffBlit.Core.Tests.csproj
+++ b/DiffBlit.Core.Tests/DiffBlit.Core.Tests.csproj
@@ -55,11 +55,15 @@
     <Compile Include="PackageTests.cs" />
     <Compile Include="FileReadTests.cs" />
     <Compile Include="PatcherTests.cs" />
+    <Compile Include="PathTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileInfoTests.cs" />
     <Compile Include="UtilityTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Content\Target\3\ExtensionlessFile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
     <None Include="Content\repo.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -87,6 +91,9 @@
     <Content Include="Content\Source\2\Changed.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Content\Source\2\ExtensionlessFile">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="Content\Source\2\UnchangedRenamed.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
