--- a/DiffBlit.Core/packages.config
+++ b/DiffBlit.Core/packages.config
@@ -6,7 +6,8 @@
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Octodiff" version="1.2.1" targetFramework="net452" />
-  <package id="Serilog" version="2.5.0" targetFramework="net452" />
+  <package id="Serilog" version="2.6.0" targetFramework="net452" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net452" />
   <package id="Serilog.Sinks.RollingFile" version="3.3.0" targetFramework="net452" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net452" />
 </packages>
