--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -1,10 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <!-- TODO: repo list -->
-    <!-- TODO: content path override if running updater outside content directory, set via Directory.SetCurrentDirectory -->
+    <!--<add key="RepoUri" value="http://updates.anvilonline.net/repo.json"/>-->
+    <add key="RepoUri" value="http://ernegien.net/eldewrito/repo.json"/>
+
+    <!-- leave blank to use the patching application's directory -->
+    <add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\ElDewrito_0.5.1.0_Release\"/> 
+    <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\1.106708 cert_ms23 (orig alpha)\"/>-->
+
+    <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
+    <add key="VersionFilePath" value="mtndew.dll"/>
+    <!--<add key="VersionFilePath" value=""/>-->
+    
   </appSettings>
-  <startup> 
-      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-  </startup>
 </configuration>
