App is now functional; still need to integrate progress and self-updating

--- a/DiffBlit.Core/DiffBlit.Core.csproj
+++ b/DiffBlit.Core/DiffBlit.Core.csproj
@@ -86,24 +86,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\ActionContext.cs" />
-    <Compile Include="Config\AddAction.cs" />
+    <Compile Include="Actions\ActionContext.cs" />
+    <Compile Include="Actions\AddAction.cs" />
     <Compile Include="Config\Content.cs" />
-    <Compile Include="Config\CopyAction.cs" />
-    <Compile Include="Config\Path.cs" />
+    <Compile Include="Actions\CopyAction.cs" />
+    <Compile Include="IO\Path.cs" />
     <Compile Include="Config\KeyVault.cs" />
-    <Compile Include="Config\MoveAction.cs" />
-    <Compile Include="Config\NoAction.cs" />
+    <Compile Include="Actions\MoveAction.cs" />
+    <Compile Include="Actions\NoAction.cs" />
     <Compile Include="Config\Package.cs" />
-    <Compile Include="Config\IAction.cs" />
+    <Compile Include="Actions\IAction.cs" />
     <Compile Include="Config\PackageSettings.cs" />
     <Compile Include="Config\PatchAlgorithmType.cs" />
-    <Compile Include="Config\RemoveAction.cs" />
+    <Compile Include="Actions\RemoveAction.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\LoggerBase.cs" />
     <Compile Include="Logging\LogLevel.cs" />
     <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Config\PatchAction.cs" />
+    <Compile Include="Actions\PatchAction.cs" />
     <Compile Include="Config\Repository.cs" />
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
