--- a/DiffBlit.Core.Tests/DiffBlit.Core.Tests.csproj
+++ b/DiffBlit.Core.Tests/DiffBlit.Core.Tests.csproj
@@ -58,6 +58,8 @@
     <Compile Include="PathTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FileInfoTests.cs" />
+    <Compile Include="RepositoryTests.cs" />
+    <Compile Include="SnapshotTests.cs" />
     <Compile Include="UtilityTests.cs" />
   </ItemGroup>
   <ItemGroup>
