--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -4,6 +4,8 @@
     <!--<add key="RepoUri" value="http://updates.anvilonline.net/repo.json"/>-->
     <add key="RepoUri" value="http://ernegien.net/eldewrito/repo.json"/>
 
+    <!--<add key="UpdateUri" value="http://ernegien.net/eldewrito/update.exe"/>-->
+    
     <!-- leave blank to use the patching application's directory -->
     <add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\ElDewrito_0.5.1.0_Release\"/> 
     <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\1.106708 cert_ms23 (orig alpha)\"/>-->
@@ -11,6 +13,12 @@
     <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
     <add key="VersionFilePath" value="mtndew.dll"/>
     <!--<add key="VersionFilePath" value=""/>-->
+
+    <!-- Indicates whether or not content should be validated before package application. -->
+    <add key="ValidateBeforePackageApply" value="false"/>
+
+    <!-- Indicates whether or not content should be validated after package application. -->
+    <add key="ValidateAfterPackageApply" value="true"/>
     
   </appSettings>
 </configuration>
