Added basic progress reporting

--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -11,14 +11,14 @@
     <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\1.106708 cert_ms23 (orig alpha)\"/>-->
 
     <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
-    <add key="VersionFilePath" value="mtndew.dll"/>
-    <!--<add key="VersionFilePath" value=""/>-->
+    <!--<add key="VersionFilePath" value="mtndew.dll"/>-->
+    <add key="VersionFilePath" value=""/>
 
     <!-- Indicates whether or not content should be validated before package application. -->
     <add key="ValidateBeforePackageApply" value="false"/>
 
     <!-- Indicates whether or not content should be validated after package application. -->
-    <add key="ValidateAfterPackageApply" value="true"/>
+    <add key="ValidateAfterPackageApply" value="false"/>
     
   </appSettings>
 </configuration>
