Bug-fixes, aka temporary hacks

--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -12,7 +12,8 @@
     <add key="UpdaterRepoUri" value="http://ernegien.net/eldewrito/updater/repo.json"/>
 
     <!-- leave blank to use the patching application's directory -->
-    <add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\ElDewrito_0.5.1.0_Release\"/> 
+    <add key="ContentPath" value=""/>
+    <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\ElDewrito_0.5.1.1_Release\"/>--> 
     <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\1.106708 cert_ms23 (orig alpha)\"/>-->
 
     <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
