Update concurrent web connection limit from 2 to 32 to prevent random timeouts during package downloads

--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -27,4 +27,9 @@
     <add key="ValidateAfterPackageApply" value="true"/>
     
   </appSettings>
+  <system.net>
+    <connectionManagement>
+      <add address="*" maxconnection="32"/>
+    </connectionManagement>
+  </system.net>  
 </configuration>
