--- a/DiffBlit.Core/DiffBlit.Core.csproj
+++ b/DiffBlit.Core/DiffBlit.Core.csproj
@@ -47,17 +47,8 @@
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAPICodePack.1.1.0\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.ExtendedLinguisticServices, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAPICodePack.1.1.0\lib\Microsoft.WindowsAPICodePack.ExtendedLinguisticServices.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.Sensors, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAPICodePack.1.1.0\lib\Microsoft.WindowsAPICodePack.Sensors.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAPICodePack.1.1.0\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.ShellExtensions, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\WindowsAPICodePack.1.1.0\lib\Microsoft.WindowsAPICodePack.ShellExtensions.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -68,7 +59,7 @@
     <Reference Include="Serilog, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.2.6.0\lib\net45\Serilog.dll</HintPath>
     </Reference>
-    <Reference Include="Serilog.Sinks.File, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
+    <Reference Include="Serilog.Sinks.File">
       <HintPath>..\packages\Serilog.Sinks.File.4.0.0\lib\net45\Serilog.Sinks.File.dll</HintPath>
     </Reference>
     <Reference Include="Serilog.Sinks.RollingFile, Version=2.0.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
@@ -76,35 +67,32 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\ActionContext.cs" />
     <Compile Include="Actions\AddAction.cs" />
-    <Compile Include="Config\Content.cs" />
+    <Compile Include="Content.cs" />
     <Compile Include="Actions\CopyAction.cs" />
     <Compile Include="IO\Path.cs" />
-    <Compile Include="Config\KeyVault.cs" />
+    <Compile Include="KeyVault.cs" />
     <Compile Include="Actions\MoveAction.cs" />
     <Compile Include="Actions\NoAction.cs" />
-    <Compile Include="Config\Package.cs" />
+    <Compile Include="Package.cs" />
     <Compile Include="Actions\IAction.cs" />
-    <Compile Include="Config\PackageSettings.cs" />
-    <Compile Include="Config\PatchAlgorithmType.cs" />
+    <Compile Include="PackageSettings.cs" />
+    <Compile Include="PatchAlgorithmType.cs" />
     <Compile Include="Actions\RemoveAction.cs" />
     <Compile Include="Logging\ILogger.cs" />
     <Compile Include="Logging\LoggerBase.cs" />
     <Compile Include="Logging\LogLevel.cs" />
-    <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Logging\NullLogger.cs" />
+    <Compile Include="Logging\SeriLogger.cs" />
     <Compile Include="Actions\PatchAction.cs" />
-    <Compile Include="Config\Repository.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="Extensions\ArrayExtensions.cs" />
     <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\StreamExtensions.cs" />
@@ -116,11 +104,11 @@
     <Compile Include="Delta\OctodiffPatcher.cs" />
     <Compile Include="Delta\PatchApiPatcher.cs" />
     <Compile Include="Delta\XDeltaPatcher.cs" />
-    <Compile Include="Config\FileInformation.cs" />
+    <Compile Include="FileInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IO\IReadOnlyData.cs" />
     <Compile Include="IO\ReadOnlyFile.cs" />
-    <Compile Include="Config\Snapshot.cs" />
+    <Compile Include="Snapshot.cs" />
     <Compile Include="Utilities\GZipWebClient.cs">
       <SubType>Component</SubType>
     </Compile>
