--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -4,27 +4,27 @@
 
     <!-- Controls the log verbosity. Valid entries are: Trace, Debug, Info, Warn, Error, Fatal -->
     <add key="LogLevel" value="Info"/>
-    
-    <!--<add key="ContentRepoUri" value="http://updates.anvilonline.net/content/repo.json"/>-->
+
+    <!-- the content repo configuration uri -->
     <add key="ContentRepoUri" value="http://ernegien.net/eldewrito/content/repo.json"/>
 
-    <!--<add key="UpdaterRepoUri" value="http://updates.anvilonline.net/updater/repo.json"/>-->
+    <!-- the updater repo configuration uri -->
     <add key="UpdaterRepoUri" value="http://ernegien.net/eldewrito/updater/repo.json"/>
 
     <!-- leave blank to use the patching application's directory -->
     <add key="ContentPath" value=""/>
-    <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\ElDewrito_0.5.1.1_Release\"/>--> 
-    <!--<add key="ContentPath" value="G:\__ HALO ONLINE BUILDS\1.106708 cert_ms23 (orig alpha)\"/>-->
 
     <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
     <add key="VersionFilePath" value="mtndew.dll"/>
-    <!--<add key="VersionFilePath" value=""/>-->
 
     <!-- Indicates whether or not content should be validated before package application. -->
     <add key="ValidateBeforePackageApply" value="false"/>
 
     <!-- Indicates whether or not content should be validated after package application. -->
     <add key="ValidateAfterPackageApply" value="true"/>
+
+    <!-- Determines whether or not to prompt the user for permission to update itself. -->
+    <add key="UpdaterAutoUpdate" value="true"/>
     
   </appSettings>
   <system.net>
