Minor bugfixes; lots of cleanup to do and ideas on paper to implement

--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -21,7 +21,7 @@
     <add key="ValidateBeforePackageApply" value="false"/>
 
     <!-- Indicates whether or not content should be validated after package application. -->
-    <add key="ValidateAfterPackageApply" value="true"/>
+    <add key="ValidateAfterPackageApply" value="false"/>
 
     <!-- Determines whether or not to prompt the user for permission to update itself. -->
     <add key="UpdaterAutoUpdate" value="true"/>
