Add optional and overwrite attributes to actions and other misc. refactoring

--- a/DiffBlitter/App.config
+++ b/DiffBlitter/App.config
@@ -17,6 +17,9 @@
     <!-- leave blank to use full hash validation of all content, or specify a file path relative to the repo base path that's unique between all versions for quicker identification -->
     <add key="VersionFilePath" value="mtndew.dll"/>
 
+    <!-- If specified, to be used as additional verification that the updater is targeting the right directory. -->
+    <add key="FileMustExist" value="eldorado.exe"/>
+
     <!-- Indicates whether or not content should be validated before package application. -->
     <add key="ValidateBeforePackageApply" value="false"/>
 
